src/objects/Paz_y_salvo__c.object
<CustomObject>
    <fields>
        <fullName>Antecedentes_de_responsabilidad_fiscal__c</fullName>
        <label>Antecedentes de responsabilidad fiscal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antecedentes_disciplinarios_procuraduria__c</fullName>
        <label>Antecedentes disciplinarios procuraduria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antecedentes_judiciales_policia_nal__c</fullName>
        <label>Antecedentes judiciales policia nal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autorizacion_de_pago_de_prorrata__c</fullName>
        <label>Autorización de pago de prorrata</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelacion_de_comision_de_legalizacion__c</fullName>
        <label>Cancelación de comisión de legalización</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cedula_de_ciudadania_cliente_deudor__c</fullName>
        <externalId>true</externalId>
        <label>Cédula de ciudadanía cliente deudor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cedula_de_ciudadania_codeudor_1__c</fullName>
        <externalId>true</externalId>
        <label>Cédula de ciudadanía codeudor 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cedula_de_ciudadania_codeudor_2__c</fullName>
        <label>Cédula de ciudadanía codeudor 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cedula_de_ciudadania_codeudor_3__c</fullName>
        <label>Cédula de ciudadanía codeudor 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente deudor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Paz y salvos</relationshipLabel>
        <relationshipName>Paz_y_salvos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Paz y salvos (Codeudor 1)</relationshipLabel>
        <relationshipName>Paz_y_salvos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Paz y salvos (Codeudor 2)</relationshipLabel>
        <relationshipName>Paz_y_salvos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Codeudor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Paz y salvos (Codeudor 3)</relationshipLabel>
        <relationshipName>Paz_y_salvos3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Constructora__c</fullName>
        <label>Constructora</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_carta_de_aprobacion__c</fullName>
        <label>Fecha carta de aprobación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_paz_y_salvo__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Fecha paz y salvo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Firma_carta_de_instrucciones__c</fullName>
        <label>Firma carta de instrucciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firma_de_pagare__c</fullName>
        <label>Firma de pagaré</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firma_fondo_nacional_de_garantias__c</fullName>
        <label>Firma fondo nacional de garantias</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Firma_solicitud_beneficio_frech__c</fullName>
        <label>Firma solicitud beneficio frech</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Credito__c</fullName>
        <externalId>true</externalId>
        <label>Solicitud de credito no</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Radicacion__c</fullName>
        <label>Id Radicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <label>Plazo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Propietario__c</fullName>
        <formula>ENCODED:{!ID:Owner:User.FirstName}&amp;&quot;&quot;&amp;{!ID:Owner:User.MiddleName}&amp;&quot;&quot;&amp;{!ID:Owner:User.LastName}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <label>Proyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seguro_de_incendio_y_terremoto_endosado__c</fullName>
        <label>Seguro de incendio y terremoto endosado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seguro_de_vida_de_credifamilia_con_firma__c</fullName>
        <label>Seguro de vida de credifamilia con firma</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seguro_de_vida_endosado__c</fullName>
        <label>Seguro de vida endosado</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seguro_incendio_terremoto_Credifamilia__c</fullName>
        <label>Seguro incendio/terremoto Credifamilia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Paz y salvos</relationshipLabel>
        <relationshipName>Paz_y_salvos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valor_del_credito__c</fullName>
        <label>Valor del credito</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sistema_de_amortizacion__c</fullName>
        <label>Sistema de amortización</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Valida_solicitud_de_credito</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Solicitud_de_credito__c )</errorConditionFormula>
        <errorMessage>PAZ-001 No modificar el consecutivo de la solicitud</errorMessage>
    </validationRules>
</CustomObject>